# PocketCoin

./: .gitignore  LICENSE  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  audit_seed.py  config.py  database.py  main.py  routers.py  schemas.py  seed.py
backend/app/models/: __init__.py  core.py
backend/app/services/: __init__.py  backups.py  budgets.py  dashboard.py  imports.py  planned_payments.py  reference_data.py  transactions.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260711_01_core_reference_data.py  20260711_02_transactions.py  20260712_03_fix_reference_name_indexes.py  20260712_04_budgets.py  20260712_05_planned_payments.py  20260712_06_import_batches.py  20260720_07_recurring_transactions.py  20260720_08_transaction_debt.py
backend/tests/: conftest.py  test_api_persistence.py  test_audit_seed.py  test_backups.py  test_budgets.py  test_credit_debt_analysis.py  test_dashboard.py  test_database.py  test_forecast.py  test_imports.py  test_planned_payments.py  test_recurring_transactions.py  test_reference_data.py  test_reports_and_export.py  test_transfers.py  test_wp17_schemas.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx  responsive-layout.test.ts
frontend/src/api/: backups.ts  budgets.ts  client.test.ts  client.ts  dashboard.ts  error.ts  health.ts  healthState.ts  imports.ts  (+4 more)
samples/imports/: invalid-rows.csv  valid-debit-credit-semicolon.csv  valid-signed-utf8.csv
(+61 files in other folders)
