[project]
name = "pocketcoin-backend"
version = "0.1.0"
description = "Local-first PocketCoin API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14",
  "fastapi>=0.115",
  "polars>=1.0",
  "pydantic>=2.10",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
